# emacs-doom

doom.d/: config.el  init.el  packages.el
doom.d/key-bindings/: evil.el  find-file.el  global.el  i-search.el  roam.el
lisp/: init.el  packages.el
modules/private-completion/company/: config.el  packages.el
modules/private-config/emacs/: autoload.el  config.el
modules/private-config/encoding/: config.el
modules/private-config/manage-minor-mode/: config.el  packages.el
modules/private-editor/default/: config.el  packages.el
modules/private-editor/drag-stuff/: autoload.el  config.el  packages.el
modules/private-editor/evil/: autoload.el  config.el
modules/private-editor/hungry-delete/: config.el  packages.el
modules/private-editor/iedit/: config.el
modules/private-emacs/dired/: config.el
modules/private-input/chinese/: config.el
modules/private-lang/cc/: README.org  config.el  packages.el
modules/private-lang/cc/template/: .dir-locals.el  CMakeLists.txt  build.sh
modules/private-lang/go/: config.el
modules/private-lang/org/: README.org  config.el
modules/private-lang/protobuf/: config.el  packages.el
modules/private-lang/python/: README.org  config.el
modules/private-lang/sh/: config.el
modules/private-term/vterm/: config.el
modules/private-tools/conf/: config.el
modules/private-tools/docker/: README.org
modules/private-tools/log/: config.el  packages.el
modules/private-ui/aw/: config.el
modules/private-ui/tabs/: config.el
modules/private-ui/theme/: config.el
modules/ui/ligatures/: config.el
(+6 files in other folders)
